Fix z-index:

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -128,6 +128,7 @@
   bottom: 0;
   left: 0;
   overflow: auto;
+  z-index: 99999;
 }
 
 [data-reach-dialog-content] {
